argocd/apps/backrest/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backrest
  name: backrest
spec:
  ports:
    - name: "http"
      port: 9898
      targetPort: 9898
  selector:
    app: backrest
